--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -5,9 +5,9 @@ demo: true
 # you don't have to restart Jekyll to see changes.
 
 photo: "https://avatars0.githubusercontent.com/u/2410692?v=2&s=150"
-name: "Elle Kasai"
+name: "Flavius"
 # copy: "I'm a UI/UX Developer based in Vancouver, Canada. More than five years of experience in design/development and have a passion for giving back to the local tech community as an instructor."
-copy: "I'm a UI/UX Developer based in Vancouver, Canada. Five years experience in design/development and my specialty is information architecture as well as rapid prototyping with scalable/modular CSS."
+copy: "I am an indie developer of apps and games."
 
 # Color scheme based on http://www.materialui.co/colors.
 # Possible values:
