--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Flavius - Chris T.
-title: 
+title:
 email:
 # email_title: Email (Email title override)
 phone:
@@ -52,7 +52,7 @@ additional_links:
 # about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile_1.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hello! I'm Flavius, and I am an indie developer that makes games and apps and other fun stuff!
+  Hello! I'm Flavius, and I am an indie developer that makes games, apps and other fun stuff!
 
 #   You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
 #    - Lists
