--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+name: Flavius - Chris T.
+title: Founder/CEO
+email:
+phone:
+website: https://flavcreations.com/
 
 # Dark Mode (true/false/never)
 darkmode: false
