--- a/_config.yml
+++ b/_config.yml
@@ -35,15 +35,9 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: assets/profile_1.jpgs #Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images
+  Hello! I'm Flavius, and I am an indie developer that makes games, apps and other fun stuff!
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
