--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,8 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-  Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+  I have a bunch of dogs and foster dogs for a dog rescue that I also manage the website and tech sides of things for.
+  I enjoy researching random things and have been working with a friend on a stream tech and information website called Libray by StreamSounds.
 
 # Footer
 footer_show_references: true
