--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,10 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: Flav Creations
+  link: https:/www.FlavCreations.com
+  job_title: Founder/CEO
+  dates: August 2018 - Present
   quote: >
-   Short description of the company (optional)
+   Create Ad Infinitum
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    Indie programmer and developer of games, apps, websites and more.
