--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,9 @@
 # Project template
 - layout: top-middle
-  name: Project name
-  link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-  github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
+  name: Library by StreamSounds
+  link: https://Library.StreamSounds.Tv
+  github:
   quote: >
-    Short overview of the project (optional)
+    We work on providing valid information to help improve streaming setups and various things that assist with streaming.
   description: | # this will include new lines to allow paragraphs
-    Description about the work on/with the project
+    A collection of tips and advice for streamers by the StreamSounds Community.
