--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 # Project template
 - layout: top-middle
   name: Library by StreamSounds
-  link: https://Library.StreamSounds.Tv
+  link: https://Library.StreamSounds.tv
   github:
   quote: >
     We work on providing valid information to help improve streaming setups and various things that assist with streaming.
