--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Experience template
 - layout: left
   company: Flav Creations
-  link: https:/www.FlavCreations.com
+  link: https:/FlavCreations.com
   job_title: Founder/CEO
   dates: August 2018 - Present
   quote: >
