--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,8 +1,8 @@
 # Experience template
 - layout: left
   company: Flav Creations
-  link: https:/FlavCreations.com
   job_title: Founder/CEO
+  link: FlavCreations.com
   dates: August 2018 - Present
   quote: >
    Create Ad Infinitum
