--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - layout: left
   company: Flav Creations
   job_title: Founder/CEO
-  link: https://www.FlavCreations.com
+  link: FlavCreations.com
   dates: August 2018 - Present
   quote: >
    Create Ad Infinitum
