--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,12 +1,12 @@
 # Project template
 - layout: top-middle
   name: Roleplay Game Live
-  link: TBA
+  link: FlavCreations.com
   quote: >
-
+    Bosses? check! Streamer? Most likely check! Fellow roster? check! Fight Commence!
   description: | # this will include new lines to allow paragraphs
   A JRPG developed around live streaming.
-  
+
 - layout: top-middle
   name: Library by StreamSounds
   link: Library.StreamSounds.tv
