--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 # Project template
 - layout: top-middle
   name: Roleplay Game Live
-  link: FlavCreations.com
+  link: RPGame.Live
   github:
   quote: >
     Bosses? Check! Streamer? Most likely check! Fellow roster? Check! Fight Commence!
