--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -10,6 +10,15 @@
     Indie programmer and developer of games, apps, websites and more.
 
 - layout: left
+  company: Library by Streamsounds
+  job_title: Co-Founder, Writer, Web Designer.
+  dates: August 2020 - March 2021
+  quote: > 
+   A collection of tips and advice for streamers by the StreamSounds Commuity. 
+  description: | 
+   We heavily research topics that range from: how to use your phone as a webcam, how to set up audio mixing with voicemeeter, and various other tools. What is DMCA and how to avoid it including links to get DMCA-Free music.
+
+- layout: left
   company: Wyvern Weapons
   job_title: Founder/Programmer
   dates: August 2008 - Present
