--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,11 +8,11 @@
   description: | # this will include new lines to allow paragraphs
     A JRPG developed around live streaming!
 
-- layout: top-middle
-  name: Library by StreamSounds
-  link: Library.StreamSounds.tv
-  github:
-  quote: >
-    We work on providing valid information to help improve streaming setups and various things that assist with streaming.
-  description: | # this will include new lines to allow paragraphs
-    A collection of tips and advice for streamers by the StreamSounds Community. We heavily research topics that range from: how to use your phone as a webcam, how to set up audio mixing with Voicemeeter and various other tools, What is DMCA and how to avoid it including links to get DMCA-Free music.
+#- layout: top-middle
+#  name: Library by StreamSounds
+#  link: Library.StreamSounds.tv
+#  github:
+#  quote: >
+#    We work on providing valid information to help improve streaming setups and various things that assist with streaming.
+#  description: | # this will include new lines to allow paragraphs
+#    A collection of tips and advice for streamers by the StreamSounds Community. We heavily research topics that range from: how to use your phone as a webcam, how to set up audio mixing with Voicemeeter and various other tools, What is DMCA and how to avoid it including links to get DMCA-Free music.
