--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ website: https://flavcreations.com/
 darkmode: false
 
 # Social links
-twitter_username: FlavCreations
+twitter_username: FlaviusIRL
 github_username:  Flavius-The-Person
-facebook_username: ChrisDTol
+facebook_username: FlaviusChrisT
 instagram_username: Flavius.The.Person
 
 # Additional icon links
